--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,16 +10,16 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "app.py",
+                "FLASK_APP": "./app/app.py",
+                "FLASK_ENV": "development",
                 "FLASK_DEBUG": "1"
             },
             "args": [
                 "run",
-                "--no-debugger",
+                
                 "--no-reload"
             ],
-            "jinja": true,
-            "justMyCode": true
-        },
+            "jinja": true
+        }
     ]
 }
